replace image links

--- a/92-sql-modeling/1-modeling-locations-reading.ipynb
+++ b/92-sql-modeling/1-modeling-locations-reading.ipynb
@@ -70,7 +70,7 @@
    "id": "39e741e4-73ab-43e4-b256-cbf07ba810b9",
    "metadata": {},
    "source": [
-    "<img src=\"./foursquare-original.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/foursquare-original.png\" width=\"100%\">"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "id": "f64f6433-eed1-42c2-8946-87e94594fcce",
    "metadata": {},
    "source": [
-    "<img src=\"./updated-data.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/updated-data.png\" width=\"100%\">"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "id": "934bb7cc-2572-44fb-a6d9-4e82eff1d56e",
    "metadata": {},
    "source": [
-    "<img src=\"./sample-data.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/sample-data.png\" width=\"100%\">"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "id": "cc1bda1d-67d1-458f-aa8b-dafbed79eb05",
    "metadata": {},
    "source": [
-    "<img src=\"./more-tables.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/more-tables.png\" width=\"100%\">"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "id": "037d4ff0-0bb2-413c-a72e-9d7b1ff3db3c",
    "metadata": {},
    "source": [
-    "<img src=\"./repeat-data.png\" width=\"90%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/repeat-data.png\" width=\"90%\">"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "id": "7cd70fc8-b098-468b-82ee-628e5bf54750",
    "metadata": {},
    "source": [
-    "<img src=\"./foreign-keys.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/foreign-keys.png\" width=\"100%\">"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "id": "451af235-fa0e-40cc-a43c-919451416b4d",
    "metadata": {},
    "source": [
-    "<img src=\"./modeling.png\" width=\"80%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/modeling.png\" width=\"80%\">"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "id": "75ffcee2-692c-4f6d-9470-a8d4411a2656",
    "metadata": {},
    "source": [
-    "<img src=\"./modeling-excel.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/modeling-excel.png\" width=\"100%\">"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "id": "25bbff06-0e6b-47f0-8b9a-cfbe93d1a752",
    "metadata": {},
    "source": [
-    "<img src=\"./repeat-data.png\" width=\"90%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/repeat-data.png\" width=\"90%\">"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "id": "75b241be-c3e6-4b96-a11b-02d20b6dd0c7",
    "metadata": {},
    "source": [
-    "<img src=\"./more-tables.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/more-tables.png\" width=\"100%\">"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "id": "c95374bc-22f3-4565-ba1d-9132408bc9fa",
    "metadata": {},
    "source": [
-    "<img src=\"./foreign-keys.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/foreign-keys.png\" width=\"100%\">"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "id": "28d2145b-6987-418d-a191-fd11aa4a9c3a",
    "metadata": {},
    "source": [
-    "<img src=\"./modeling.png\" width=\"80%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/modeling.png\" width=\"80%\">"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "id": "687ed203-0b82-4b6c-bc2d-a5dbdad84410",
    "metadata": {},
    "source": [
-    "<img src=\"./modeling-excel.png\" width=\"100%\">"
+    "<img src=\"https://raw.githubusercontent.com/jigsawlabs-student/curriculum-images/main/sql-modeling/modeling-excel.png\" width=\"100%\">"
    ]
   }
  ],
